--- a/harmony/secure_key_store/oh-package.json5
+++ b/harmony/secure_key_store/oh-package.json5
@@ -1,6 +1,6 @@
 {
   "name": "@react-native-ohos/react-native-secure-key-store",
-  "version": "2.0.11-rc.1",
+  "version": "2.0.11",
   "description": "React Native Secure Key Store for HarmonyOS",
   "main": "src/main/ets/index.ets",
   "author": "",
@@ -12,7 +12,7 @@
   "ohos": {
     "org": "react-native-oh-library",
     "name": "react-native-secure-key-store",
-    "version": "2.0.11-rc.1",
+    "version": "2.0.11",
     "license": "ISC"
   },
   "peerDependencies": {
